adding instruction boxes

--- a/assets/src/css/common.css
+++ b/assets/src/css/common.css
@@ -40,6 +40,7 @@ nav {background: none !important;}
 .f-dancing-script {font-family: 'Dancing Script', cursive;}
 
 .c-white { color: white !important; }
+.c-gray { color: #797979 !important; }
 .c-mint {color: #8BB79F !important;}
 .c-salmon {color: #FF7373 !important;}
 
