--- a/assets/src/css/common.css
+++ b/assets/src/css/common.css
@@ -5,6 +5,7 @@ nav {background: none !important;}
 /*height*/
 .h40 {height: 40px;}
 .h50 {height: 50px !important;}
+.h200 {height: 200px !important;}
 .h400 {height: 400px;}
 .h533 {height: 533px;}
 
